update cascaded model examples

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
             'DLM1-cross' : 'DLM2',
             'DLM0' : 'DLM1',
             'MS-TLM' : 'MS-TLM',
+            'LM-BPE' : 'Cascaded',
         };
         var methods = Object.keys(methods2names);
         var root = './audio/all_models/stereo';
