--- a/spiritlm/index.html
+++ b/spiritlm/index.html
@@ -56,19 +56,40 @@
 
     <div class="container float-div">
         <div class="text-center">
-        <h1 id="small-caps">&#128293;Spirit-LM</h1>
+        <h1 id="small-caps">&#128293;SpiRit-LM</h1>
         <h3>Interleaved Spoken and Written Language Model</h3>
+        <h6 style="color: var(--c1)">
+            [<a href="#", target='_blank'>Paper</a>]
+
+        </h6>
         </div>
+
+        <p style="text-align: center; font-style: italic;">
+            Tu Anh Nguyen<sup>a,1,2</sup>, Benjamin Muller<sup>a,1</sup>, Bokai Yu<sup>a,1</sup>, <br>
+            Marta R. Costa-jussa<sup>b,1</sup>, Maha Elbayad<sup>b,1</sup>, Sravya Popuri<sup>b,1</sup>, <br>
+            Paul-Ambroise Duquenne<sup>b,1</sup>, Robin Algayres<sup>b,3</sup>, Ruslan Mavlyutov<sup>b,1</sup>, Itai Gat<sup>b,1</sup>, <br>
+            Gabriel Synnaeve<sup>c,1</sup>, Juan Pino<sup>c,1</sup>, Benoît Sagot<sup>c,2</sup>, Emmanuel Dupoux<sup>c,1,3</sup> <br>
+        </p>
+        <p style="text-align: center; font-weight: bold;">
+            <sup>1</sup>Meta AI, &nbsp; <sup>2</sup>Inria, Paris, &nbsp; <sup>3</sup>EHESS, ENS-PSL, CNRS, Paris
+        </p>
+        <p style="text-align: center;">
+            <tt>{ntuanh, benjaminmuller, bokai, dpx}@meta.com</tt>
+        </p>
+        <p style="text-align: center; font-style: italic;">
+            <sup>a,b,c</sup>Equally contributed as co-first, co-second and co-last authors, resp.
+        </p>
         <br>
         <p>
-            We introduce <a id="small-caps">Spirit-LM</a>, a collection of foundation multimodal language models
-            that freely mixes text and speech, and are trained jointly with tokens extracted from both speech and
-            text corpora. The speech tokens are based on speech units independently capturing semantics, pitch, and
-            style information, while the text is encoded with subword BPE tokens. They are concatenated as a single
-            set of tokens, and trained with a word-level interleaving method using a small automatically-curated
-            speech-text parallel corpus. The resulting models display both the semantic abilities of text models
-            and the expressive abilities of speech models. Additionally, we demonstrate that SPIRIT-LM is able to
-            learn new tasks in a few-shot fashion across modalities (i.e. ASR, TTS, Speech Classification).
+            We introduce <a id="small-caps">SpiRit-LM</a>, a foundation multimodal language model
+            that freely mixes text and speech, and is trained jointly with tokens extracted from both speech and
+            text corpora. The speech tokens are based on speech units independently capturing semantics, and for
+            the expressive version, pitch, and style information, while the text is encoded with subword BPE tokens.
+            They are concatenated as a single set of tokens, and trained with a word-level interleaving method using
+            a small automatically-curated speech-text parallel corpus. The resulting model displays both the semantic
+            abilities of text models and the expressive abilities of speech models. Additionally, we demonstrate that
+            <a id="small-caps">SpiRit-LM</a> is able to learn new tasks in a few-shot fashion across modalities
+            (i.e. ASR, TTS, Speech Classification).
         </p>
     </div>
 
@@ -82,7 +103,7 @@
 
     <div class="container float-div">
         <div class="text-center">
-            <h2><a id="small-caps">Spirit-LM</a> Model Overview </h2>
+            <h2><a id="small-caps">SpiRit-LM</a> Model Overview </h2>
             <img src="spirit_overview.JPG" style="width:80%">
         </div>
     </div>
@@ -90,16 +111,16 @@
     <div class="container float-div">
         <!-- <h2>Generation samples from  <a id="small-caps">Spot-llama</a></h2> -->
         <div class="text-center">
-        <h2>Generation samples from  <a id="small-caps">Spirit-LM-Base</a> </h2>
+        <h2>Generation samples from  <a id="small-caps">SpiRit-LM-Base</a> </h2>
         </div>
         <br>
         <p>
             We prompt the model with either Text or Speech, and generate with either the same or different modality.
-            
+
             We give the model with a tag <code>[Text]</code> or <code>[Speech]</code> to signal a change of modality.
             The (cherry picked) samples illustrate the capacity
         of the model to continue a prompt in a semantically coherent
-        fashion within or across modalities.
+        fashion across modalities.
         </p>
         <div class="table-responsive pt-3">
             <table style="text-align: center" class="table table-hover">
@@ -125,10 +146,6 @@
                     </td>
                 </tr>
 
-                <tr>
-                    <td><audio controls controlslist="nodownload" src='audio/interleaving_base_175k/a_b_c_d_e_prompt_orin.wav'></audio></td>
-                    <td><audio controls controlslist="nodownload" src='audio/interleaving_base_175k/a_b_c_d_e_cont_speech.wav'></audio></td>
-                </tr>
 
                 <tr>
                     <td>The largest country in the world is</td>
@@ -157,7 +174,7 @@
 
     <div class="container float-div">
         <div class="text-center">
-        <h2>Generation samples from  <a id="small-caps">Spirit-LM-Expressive</a> </h2>
+        <h2>Generation samples from  <a id="small-caps">SpiRit-LM-Expressive</a> </h2>
         </div>
         <br>
         <p>
@@ -165,7 +182,7 @@
         Text or Speech modality. For Speech prompt, we use the same
         prompt content with different speaking styles to express the
         emotion. The (cherry-picked) examples show that <a
-        id="small-caps">Spirit-LM-Expressive</a> is able to transfer
+        id="small-caps">SpiRit-LM-Expressive</a> is able to transfer
         the expressive style of the prompt onto the continuation
         within or across a change in modality.
             <br>
@@ -185,22 +202,26 @@
                 <!-- happy -->
                 <tr>
                     <td>I am absolutely thrilled to be embarking on this new journey, it's going to be an incredible adventure and</td>
-                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_pos_3.wav'></audio></td>
+                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_happy.wav'></audio></td>
                 </tr>
 
+                <!-- angry -->
+                <tr>
+                    <td>This is unbelievable! My brand new car, ruined! How can someone be so careless and disrespectful?! Seriously?!</td>
+                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_angry.wav' type='audio/mpeg'></audio></td>
+                </tr>
                 <!-- sad -->
                 <tr>
-                    <td>I am so deeply saddened, it feels as if my heart is shattering into a million pieces and</td>
-                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_neg_3.wav' type='audio/mpeg'></audio></td>
+                    <td rowspan="2" style="vertical-align: middle;">I can't believe she's gone. I don't know how to cope without her. The pain of losing her is overwhelming. I feel so lost without her</td>
+                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_sad.wav' type='audio/mpeg'></audio></td>
                 </tr>
                 <tr>
-                    <td>I can't believe she's gone. I don't know how to cope without her. The pain of losing her is overwhelming. I feel so lost without her</td>
-                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_neg_5.wav' type='audio/mpeg'></audio></td>
+                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_sad_second_speaker.wav' type='audio/mpeg'></audio></td>
                 </tr>
                 <!-- fear -->
                 <tr>
                     <td>Did you hear that? What is that sound? I'm really scared. It's so dark, and that noise... it sounds so creepy.</td>
-                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_neg_4.wav' type='audio/mpeg'></audio></td>
+                    <td><audio controls controlslist="nodownload" src='audio/expressive/T2S_fear.wav' type='audio/mpeg'></audio></td>
                 </tr>
 
                 <!-- S -> T -->
@@ -212,14 +233,14 @@
                 <!-- negative -->
                 <tr>
                     <td><audio controls controlslist="nodownload" src='audio/expressive/S2T_neg_1.wav'></audio></td>
-                    <td>Yeah, it's a movie where they're running around in the rain and it's very noisy and you have to be able to hear over that. That's not a good strategy. That's why I'm g</td>
+                    <td>Yeah, it's a movie where they're running around in the rain and it's very noisy and you have to be able to hear over that. That's not a good strategy. That's why I'm</td>
                 </tr>
 
                 <!-- S -> S -->
                 <!-- positive -->
                 <tr>
                     <td><audio controls controlslist="nodownload" src='audio/expressive/S2T_pos_1.wav'></audio></td>
-                    <td><audio controls controlslist="nodownload" src='audio/expressive/S2S_pos_2.wav'></audio></td>
+                    <td><audio controls controlslist="nodownload" src='audio/expressive/S2S_pos_1.wav'></audio></td>
                 </tr>
                 <!-- negative -->
                 <tr>
